Mapping de entidades, criação da Migration Initial, criação de Script do Banco de Dados.

--- a/SuperCar.App/SuperCar.App.csproj
+++ b/SuperCar.App/SuperCar.App.csproj
@@ -4,13 +4,19 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <UserSecretsId>aspnet-SuperCar.App-D9DC8245-CBDB-46FA-B086-4AA7C88FCB5D</UserSecretsId>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <GenereteRuntimeConfigurationFiles>True</GenereteRuntimeConfigurationFiles>
   </PropertyGroup>
 
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.1" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\SuperCar.Data\SuperCar.Data.csproj" />
   </ItemGroup>
 
 </Project>
